--- a/templates/login.html
+++ b/templates/login.html
@@ -1,19 +1,29 @@
-{% extends "base.html" %}
+{% extends "new_base.html" %}
 {% block content %}
-<div id="home-log-in"><h1>Please log in.</h1></div>
-<div class="col-md-8 offset 2">
-  <form action="/login" method="POST">
-    <label>Username:
-      <input type="username" name="username" required>
-    </label>
-    <label>Password:
-      <input type="password" name="password" required>
-    </label>
-    <input type="submit" value="Log in">
-  </form>
-  <form action="/register" method="GET">
-    Not a user yet? <a href="/register"><b>Register Now!</b></a>
-  </form>
+<div class="container">
+  <div class="box">
+    <div class="col-lg-12">
+      <div class="col-lg-12 text-center">
+        <hr>
+        <h2 class="intro-text text-center">
+            <strong>Please Log In</strong>
+        </h2>
+        <div class="col-md-8 offset 2">
+          <form action="/login" method="POST">
+            <label>Username:
+              <input type="username" name="username" required>
+            </label>
+            <label>Password:
+              <input type="password" name="password" required>
+            </label>
+            <input type="submit" value="Log in">
+          </form>
+          <form action="/register" method="GET">
+            Not a user yet? <a href="/register"><b>Register Now!</b></a>
+          </form>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
