--- a/templates/make_ratings.html
+++ b/templates/make_ratings.html
@@ -1,20 +1,28 @@
-{% extends "base.html" %}
-{% block head %}
-<link rel="stylesheet" href="static/base.css">
-<link rel="stylesheet" href="static/make_comment.css">
-{% endblock %}
+{% extends "new_base.html" %}
 {% block content %}
-<div>
-  <div class="rating-box">
-    <h2>How do you think about this restaurant?</h2>
-    <form action="/ratings/{{ restaurant_id }}" method="POST">
-      <br><label>Cleanliness <input name="rating1" type="number" class="rating" min=1 max=5 data-size="md"></label>
-      <br><label>Quality <input name="rating2" type="number" class="rating" min=1 max=5 data-size="md"></label>
-      <br><label>Atmosphere <input name="rating3" type="number" class="rating" min=1 max=5 data-size="md"></label>
-      <br><label>Consistency <input name="rating4" type="number" class="rating" min=1 max=5 data-size="md"></label>
-      <br><input type="submit" value="Rate!">
-    </form>
-  </div>
+<div class="container">
+    <div class="row">
+        <div class="box">
+            <div class="col-lg-12 text-center">
+                <hr>
+                <h2 class="intro-text text-center">
+                    <strong>How do you think about this restaurant?</strong>
+                </h2>
+                <hr>
+                <form action="/ratings/{{ restaurant_id }}" method="POST">
+                      <br><h3>Cleanliness  
+                        <input name="rating1" type="number" class="rating" min=1 max=5 data-size="md"></h3>
+                      <br><h3>Quality  
+                        <input name="rating2" type="number" class="rating" min=1 max=5 data-size="md"></h3>
+                      <br><h3>Atmosphere  
+                        <input name="rating3" type="number" class="rating" min=1 max=5 data-size="md"></h3>
+                      <br><h3>Consistency  
+                        <input name="rating4" type="number" class="rating" min=1 max=5 data-size="md"></h3>
+                      <br><input type="submit" value="Rate!">
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
-    
+            
 {% endblock %}
