--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,37 +1,72 @@
-{% extends "base.html" %}
+{% extends "new_base.html" %}
 {% block content %}
-<h1>User Profile</h1>
-<br>
-<div class="row">
-  <div class="well spaced" style="width:80%">
-    <div class=col-md-6>
-      <a href="/list_favlist/{{ user.user_id }}">My Favorites</a><br>
+<div class="container">
+    <div class="row">
+        <div class="box">
+            <div class="col-lg-12">
+                <hr>
+                <h2 class="intro-text text-center">
+                    <strong>Account Detail</strong>
+                </h2>
+                <hr>
+                <div class="col-lg-6">
+                    <p><a href="/list_favlist/{{ user.user_id }}">My Favorites</a></p>
+                    <p>Last Login: {{ last_login }}</p>
+                    <p>Name: <b>{{ user.fname }} {{ user.lname }}</b></p>
+                    <p>Username: <b>{{ user.username }}</b></p>
+                    <p>Favorite Cuisine: <a href="/lookup_cuisine">{{ user.fav_cuisine }}</a></p>
+                    <p>Member Since: {{ membership }}</p>
+                </div>
+                <div class="col-lg-6">
+                    <img src="/static/img/user.png" class="img-rounded" height="200px" width="200px">
+                </div>
+                <p></p>
+            </div>
+        </div>
     </div>
-  </div>
-  <div class="well spaced" style="width:80%">
-    <p>Member Since: {{ membership }}</p>
-    <p>Last Login: {{ last_login }}</p>
-    <h2>Account Details</h2>
-    <p>Name: <b>{{ user.fname }} {{ user.lname }}</b></p>
-    <p>Username: <b>{{ user.username }}</b></p>
-    <p>Favorite Cuisine: <a href="/lookup_cuisine">{{ user.fav_cuisine }}</a></p>
-    <b>Recent Ratings</b><br>
-      {% for r in user.ratings %}
-      <p>Restaurant: <b>{{ r.restaurant.name }}</b></p>
-      <p>Cleanliness: {{ r.cleanliness }}</p>
-      <p>Quality: {{ r.quality }}</p>
-      <p>Atmosphere: {{ r.atmosphere }}</p>
-      <p>Consistency: {{ r.consistency }}</p>
-      {% endfor %}
-    <div><h3>User Comments</h3><br>
-      {% for c in user.comments %}
-      <div class="comment-div" id="comment-{{ c.comment_id }}">
-        <b><a href="/search_restaurant/{{ c.comments.restaurant_id }}">{{ c.comments.name }}</a></b> - {{ c.comment }}
-          <a href='/remove_comment.json' data-comment-id="{{ c.comment_id }}" class="remove">Remove</a>
-      </div>
-      {% endfor %}
+
+    <div class="row">
+        <div class="box">
+            <div class="col-lg-12">
+                <hr>
+                <h2 class="intro-text text-center">
+                    <strong>Recent Ratings</strong>
+                </h2>
+                <hr>
+                {% for r in user.ratings %}
+                    <div class="col-lg-4">
+                        <p>Restaurant: <b>{{ r.restaurant.name }}</b></p>
+                        <p>Cleanliness: {{ r.cleanliness }}</p>
+                        <p>Quality: {{ r.quality }}</p>
+                        <p>Atmosphere: {{ r.atmosphere }}</p>
+                        <p>Consistency: {{ r.consistency }}</p>
+                    </div>
+                    <div class="col-lg-4">
+                        <img src={{ r.restaurant.image }} style="display: inline-block;" height="225px" width="285px">
+                    </div>
+                {% endfor %} 
+            </div>
+        </div>
     </div>
-  </div>
+
+    <div class="row">
+        <div class="box">
+            <div class="col-lg-12">
+                <hr>
+                <h2 class="intro-text text-center">
+                    <strong>User Comments</strong>
+                </h2>
+                <hr>
+                {% for c in user.comments %}
+                    <div class="comment-div" id="comment-{{ c.comment_id }}">
+                        <strong><a href="/search_restaurant/{{ c.comments.restaurant_id }}">{{ c.comments.name }}</a></strong> - {{ c.comment }}
+                        <a href='/remove_comment.json' data-comment-id="{{ c.comment_id }}" class="remove">Remove</a>
+                    </div>
+                {% endfor %}
+                <p></p>
+            </div>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
